force-app/main/default/objects/ER_Asset_Solution__c/ER_Asset_Solution__c.object-meta.xml
<CustomObject>
    <label>Asset Solution</label>
    <nameField>
        <label>Asset Solution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Solutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>