force-app/main/default/objects/ER_Asset_Solution__c/fields/ER_Asset__c.field-meta.xml
<CustomField>
    <fullName>ER_Asset__c</fullName>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Asset Solutions</relationshipLabel>
    <relationshipName>Asset_Solutions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>