force-app/main/default/objects/ER_Asset_Solution__c/fields/ER_Asset_Solution_Type__c.field-meta.xml
<CustomField>
    <fullName>ER_Asset_Solution_Type__c</fullName>
    <label>Asset Solution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ticket Resto</fullName>
            </value>
            <value>
                <fullName>Kadeos</fullName>
            </value>
            <value>
                <fullName>Travel Pro</fullName>
            </value>
            <value>
                <fullName>XXXXXXX</fullName>
            </value>
            <value>
                <fullName>YYYYYYY</fullName>
            </value>
            <value>
                <fullName>ZZZZZZZZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>