force-app/main/default/objects/ER_Asset_Solution__c/fields/ER_Solution_expiration_date__c.field-meta.xml
<CustomField>
    <fullName>ER_Solution_expiration_date__c</fullName>
    <label>Solution expiration date</label>
    <type>Date</type>
</CustomField>